[Nova] : Some Modifications in backend